--- a/src/css/style.css
+++ b/src/css/style.css
@@ -14,7 +14,7 @@ video {
     justify-content: center;
     align-items: center;
     height: 100vh;
-    gap: 40px;
+    gap: 15px;
     width: 100%;
     padding-top: 100px;
 }
@@ -29,10 +29,17 @@ h1{
   position: fixed;
 }
 img{
-    width: 200px;
-    height: 200px;
-    opacity: 0.50;
+    width: 250px;
+    height: 250px;
     z-index: -50;
+    transition: 0.2s linear;
+    opacity: 0;
+    transform: translateY(45px);
+}
+.active{
+    transition: 0.2s linear;
+    opacity: 0.50;
+    transform: translateY(0px);
 }
 .last-text{
     text-align: center;
@@ -46,4 +53,25 @@ img{
 .block-text{
     display: flex;
     justify-content: center;
+}
+button{
+    background: black;
+    position: fixed;
+    top: 50%;
+    /* transform: rotate(90deg); */
+    right: 10px;
+    width: 50px;
+    height: 50px;
+    border: 1px solid gray;
+    color: gray;
+    animation: Voice infinite 0.5s linear alternate;
+    transform: scale(1);
+}
+@keyframes Voice {
+    from{
+        transform: scale(1.3);
+    }
+    to{
+        transform: scale(1);
+    }
 }
