--- a/src/css/style.css
+++ b/src/css/style.css
@@ -6,72 +6,81 @@ video {
     top: 0;
     left: 0;
     z-index: -100;
-  }
-.container{
+}
+
+.container {
     z-index: 100;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-    height: 100vh;
     gap: 15px;
     width: 100%;
     padding-top: 100px;
+    margin-bottom: 50px;
 }
-h1{
-    /* -webkit-text-stroke-width: 1px;
-  -webkit-text-stroke-color: rgb(146, 146, 146);
-  -webkit-text-fill-color: rgba(255, 0, 0, 0); */
-  color: gray;
-  font-size: clamp(1.3rem, 3vw, 2rem);
-  /* color: transparent; */
-  font-weight: bolder;
-  position: fixed;
+
+h1 {
+    color: rgb(255, 255, 255);
+    font-size: clamp(1.3rem, 3vw, 2rem);
+    font-weight: bolder;
+    position: fixed;
+    font-family: 'Edu TAS Beginner', cursive;
 }
-img{
-    width: 250px;
-    height: 250px;
+
+img {
+    max-width: 500px;
+    width: 100%;
     z-index: -50;
     transition: 0.2s linear;
     opacity: 0;
     transform: translateY(45px);
+    border-radius: 5px;
 }
-.active{
+
+.active {
     transition: 0.2s linear;
     opacity: 0.50;
     transform: translateY(0px);
 }
-.last-text{
+
+.last-text {
     text-align: center;
-    font-family: sans-serif;
-    /* display: flex;
-    justify-content: center; */
-    color: gray;
+    font-family: 'Edu TAS Beginner', cursive;
+    color: rgb(0, 0, 0);
     position: fixed;
     bottom: 0;
 }
-.block-text{
+
+.block-text {
     display: flex;
     justify-content: center;
 }
-button{
-    background: black;
+
+button {
+    background: 0;
     position: fixed;
     top: 50%;
-    /* transform: rotate(90deg); */
     right: 10px;
     width: 50px;
     height: 50px;
     border: 1px solid gray;
-    color: gray;
     animation: Voice infinite 0.5s linear alternate;
     transform: scale(1);
+    cursor: pointer;
+    border-radius: 50%;
+    box-shadow: 0px 7px 20px rgb(0, 0, 0);
+}
+
+.voice {
+    filter: brightness(82%) saturate(106%) contrast(651%) invert(80%);
 }
 @keyframes Voice {
-    from{
+    from {
         transform: scale(1.3);
     }
-    to{
+
+    to {
         transform: scale(1);
     }
 }
